--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,17 @@ jobs:
             push: true
             tags: |
               atulchan/billcost_app_backend:latest
+
+        - name: SSH into AWS Instance and Update Docker Container
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.AWS_HOST }}
+            username: ${{ secrets.AWS_USERNAME }}
+            key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
+            script: |
+              docker pull atulchan/billcost_app_backend:latest
+              docker stop billcost_app_backend
+              docker rm billcost_app_backend
+              docker run -d -p 9090:8080 --name billcost_app_backend atulchan/billcost_app_backend:latest       
               
 
